# 3-python-package-teamproj3

./: Pipfile  README.md  example.py  pyproject.toml
.github/workflows/: build.yml
src/fortunecookiepkg/: __init__.py  __main__.py  fortunecookie.py
tests/: test_fortunecookie.py
